--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -600,6 +600,8 @@
         <item>95</item>   <!-- <item>sensorRadius</item> -->
     </integer-array>
 
+    <bool name="config_supportsScreenOffUdfps">true</bool>
+
     <!-- How long it takes for the HW to start illuminating after the illumination is requested. -->
     <integer name="config_udfps_illumination_transition_ms">0</integer>
 
